--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
-node_modules
+# =========================
+# Logs
+# =========================
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# =========================
+# Node Modules & Build
+# =========================
+node_modules/
+dist/
+*.local
+
+# =========================
+# Environment Variables
+# =========================
+.env
+
+# =========================
+# Editor & OS Files
+# =========================
+.vscode/
+!.vscode/extensions.json
+.idea/
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
